# wwm

./: .gitignore  Cargo.toml
bindings/: Cargo.toml  build.rs
src/: main.rs  tray_icon.rs
