[package]
name = "wmm"
version = "0.1.0"
authors = ["Przemek <przempore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systray = "0.4.0"
windows = { git = "https://github.com/microsoft/windows-rs" }
bindings = { path = "bindings" }
mouse-rs = "0.4"
